# ai_news_reporter

./: .gitignore  README.md  config.example.yaml  pyproject.toml  setup_cron.sh
config/: .env.example  config.example.yaml
scripts/: setup_cron.sh
src/ai_news_reporter/: __init__.py  main.py
src/ai_news_reporter/collectors/: __init__.py  base.py  image_extractor.py  scraper.py  tavily_search.py
src/ai_news_reporter/core/: __init__.py  config.py  exceptions.py
src/ai_news_reporter/delivery/: __init__.py  base.py  email.py  file.py  slack.py
src/ai_news_reporter/llm/: __init__.py  base.py  claude.py  factory.py  openai_llm.py
src/ai_news_reporter/models/: __init__.py  article.py  report.py
src/ai_news_reporter/processors/: __init__.py  deduplicator.py  summarizer.py
src/ai_news_reporter/scheduler/: __init__.py  cron.py
tests/: __init__.py  test_images.py
